# sdpb

./: .clang-format  .dockerignore  .gitattributes  .gitignore  BlockDenseMatrix.h  CITATION.cff  CMakeLists.txt  Changelog.md  DenseMatrix.h  Dockerfile  Install.md  LICENSE  LowRankConstraintMatrix.h  Makefile  Makefile_CUBLAS  README.md  Readme.md  Readme_Win.md  SquareMatrix.h  apfp.py  boost.py  cblas.py  clang_compilation_database.py  cuda.py  cxx14.py  cxx17.py  elemental.py  gmpxx.py  libarchive.py  libarchive_cpp.py  libxml2.py  libxmlxx.py  main.cpp  mkl.py  mpfr.py  openmp.py  parse.cpp  parse.h  rapidjson.py  tinyxml2.cpp  (+5 more)
src/approx_objective/: Approx_Objective.hxx  Approx_Parameters.cxx  Approx_Parameters.hxx  Axpy.cxx  CMakeLists.txt  DSDP_Parameters.hxx  compute_approximate_objective.cxx  compute_approximate_objectives.cxx  linear_approximate_objectives.cxx  main.cxx  quadratic_approximate_objectives.cxx  setup_solver.cxx  write_solver_state.cxx
src/approx_objective/Approx_Objective/: Approx_Objective.cxx
src/approx_objective/Approx_Parameters/: Approx_Parameters.cxx  ostream.cxx
src/approx_objective/DSDP_Parameters/: DSDP_Parameters.cxx  ostream.cxx
src/approx_objective/compute_approximate_objective/: compute_approximate_objective.cxx  compute_dx_dy.cxx
src/approx_objective/compute_approximate_objectives/: compute_approximate_objectives.cxx
src/outer_limits/: Block.hxx  CMakeLists.txt  Function.hxx  Outer_Parameters.cxx  Outer_Parameters.hxx  compute_optimal.cxx  convert_matrices_to_functions.cxx  eval_weighted.cxx  eval_weighted.hxx  get_new_points.cxx  load_poly.hxx  load_vector.cxx  main.cxx  poles_prefactor.cxx  poles_prefactor.hxx  power_prefactor.cxx  power_prefactor.hxx  solve_LP.cxx  solve_LP.hxx
src/outer_limits/Functional/: Functional.cxx  prefactor.cxx
src/outer_limits/Mesh/: ostream.cxx
src/outer_limits/Outer_Parameters/: Outer_Parameters.cxx  ostream.cxx  to_property_tree.cxx
src/outer_limits/compute_optimal/: Mesh.hxx  compute_optimal.cxx  compute_optimal_functions.cxx  compute_y_transform.cxx  copy_matrix.cxx  eval_function.cxx  eval_function.hxx  eval_summed.cxx  eval_weighted.cxx  eval_weighted.hxx  eval_weighted_functions.cxx  fill_weights.cxx  get_new_points.cxx  poles_prefactor.cxx  poles_prefactor.hxx  power_prefactor.cxx  power_prefactor.hxx  save_checkpoint.cxx  setup_constraints.cxx  setup_constraints.hxx  setup_constraints_functions.cxx
src/outer_limits/read_function_blocks/: Function_Block.hxx  Functions_File_Parse_Result.hxx  Json_Function_Blocks_Parser.hxx  Json_Function_Parser.hxx  read_function_blocks.cxx
src/outer_limits/read_points/: Json_Points_Parser.hxx  read_points.cxx
src/pmp/: CMakeLists.txt  Damped_Rational.hxx  PMP_Info.hxx  PVM_Info.hxx  Polynomial.hxx  Polynomial_Matrix_Program.hxx  Polynomial_Power_Product.hxx  Polynomial_Vector_Matrix.cxx  Polynomial_Vector_Matrix.hxx
src/pmp2functions/: CMakeLists.txt  Pmp2functions_Parameters.cxx  Pmp2functions_Parameters.hxx  main.cxx  write_functions.cxx
src/pmp2sdp/: Archive_Entry.cxx  Archive_Writer.cxx  Archive_Writer.hxx  Block_File_Format.hxx  CMakeLists.txt  Dual_Constraint_Group.hxx  byte_counter.hxx  main.cxx  write_block_data.cxx  write_block_info_json.cxx  write_control_json.cxx  write_normalization_json.cxx  write_pmp_info_json.hxx  write_sdp.cxx  write_sdp.hxx  write_vector.hxx
src/pmp_read/: CMakeLists.txt  PMP_File_Parse_Result.cxx  PMP_File_Parse_Result.hxx  collect_files_expanding_nsv.cxx  pmp_read.hxx  read_nsv_file_list.cxx  read_polynomial_matrix_program.cxx
src/pvm2sdp/: CMakeLists.txt  Dual_Constraint_Group.hxx  Polynomial.hxx  Polynomial_Vector_Matrix.hxx  main.cxx  parse_command_line.cxx  read_input_files.cxx  set_stream_precision.hxx  write_bilinear_bases.cxx  write_blocks.cxx  write_free_var_matrix.cxx  write_objective.cxx  write_objectives.cxx  write_primal_objective.cxx  write_primal_objective_c.cxx  write_vector.hxx
src/sdp2input/: Boost_Float.hxx  CMakeLists.txt  Damped_Rational.hxx  Positive_Matrix_With_Prefactor.hxx  convert.cxx  main.cxx
src/sdp_solve/: Archive_Reader.cxx  Archive_Reader.hxx  Block_Diagonal_Matrix.cxx  Block_Diagonal_Matrix.hxx  Block_Info.hxx  Block_Matrix.hxx  Block_Vector.hxx  CMakeLists.txt  SDP.hxx  SDP_Solver.hxx  SDP_Solver_Parameters.hxx  SDP_Solver_Terminate_Reason.cxx  SDP_Solver_Terminate_Reason.hxx  Solver_Parameters.hxx  Write_Solution.cxx  Write_Solution.hxx  lower_triangular_transpose_solve.cxx  lower_triangular_transpose_solve.hxx  memory_estimates.hxx  read_text_block.cxx  read_text_block.hxx  sdp_solve.hxx
src/sdp_solve/SDP/: SDP.cxx  (+5 more)
src/sdpb/: Block_Info.hxx  CMakeLists.txt  SDPB_Parameters.cxx  SDPB_Parameters.hxx  SDP_Solver_Parameters.hxx  Timer.hxx  Timers.hxx  Write_Solution.cxx  Write_Solution.hxx  create_block_info.hxx  main.cxx  read_vector.hxx  save_sdpb_solution.hxx  save_solution.cxx  save_solution.hxx  solve.cxx  solve.hxx  time_and_solve.hxx  write_timing.cxx  write_timing.hxx
src/sdpb_util/: Archive_Reader.cxx  Archive_Reader.hxx  Boost_Float.cxx  Boost_Float.hxx  CMakeLists.txt  Damped_Rational.hxx  Environment.cxx  Environment.hxx  Memory_Tracker.cxx  Memory_Tracker.hxx  Mesh.cxx  Number_State.hxx  Polynomial.hxx  Proc_Meminfo.cxx  Proc_Meminfo.hxx  Shared_Window_Array.hxx  Simple_Matrix.hxx  Vector_State.hxx  Verbosity.hxx  assert.hxx  boost_serialization.hxx  cholesky_condition_number.hxx  copy_matrix.cxx  copy_matrix.hxx  flint.hxx  hadamard.hxx  malloc_trim.hxx  memory_estimates.cxx  memory_estimates.hxx  print_cholesky_diagonal_info.hxx  split_range.hxx  to_matrix.hxx  write_distmatrix.hxx  write_matrix.hxx
src/spectrum/: CMakeLists.txt  Format.hxx  Zero.hxx  Zeros.hxx  compute_lambda.cxx  compute_lambda.hxx  compute_spectrum.cxx  compute_spectrum_pmp.cxx  compute_spectrum_pvm.cxx  eval_summed.cxx  eval_summed.hxx  get_zeros.cxx  get_zeros.hxx  handle_arguments.cxx  is_origin_zero.cxx  is_origin_zero.hxx  main.cxx  read_c_minus_By.cxx  read_pmp_info.cxx  read_x.cxx  read_y.cxx  write_polynomial_vector_vector.hxx  write_profiling.cxx  write_spectrum.cxx
(+1733 files in other folders)
